--- a/style.css
+++ b/style.css
@@ -892,7 +892,7 @@ h1 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
     z-index: 0;
 }
 
